--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Resources/style.css">
-    <title>Colmar Academy</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./Resources/style.css">
+	<title>Colmar Academy</title>
 </head>
 <body>
-    
+	<header>
+		<img src="./Resources/images/ic-logo.svg" alt="Colmar Academy Logo">
+		<p>COLMAR<span>ACADEMY</span></p>
+		<nav>
+			<a href="">On campus</a>
+			<a href="">Online</a>
+			<a href="">For companies</a>
+			<a href="">Sign in</a>
+		</nav>
+	</header>
+
+	<footer>
+
+	</footer>
 </body>
 </html>
