--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 		</nav>
 	</header>
 
+	<main>
+		<img src="./Resources/images/banner.jpg" alt="Students Learning">
+		<h1>Learn something new everyday</h1>
+		<h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h3>
+		<button>Start here</button>
+	</main>
+
 	<footer>
 
 	</footer>
