--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<title>Colmar Academy</title>
 </head>
 <body>
+
+	<!-- NAVBAR -->
 	<header>
 		<img src="./Resources/images/ic-logo.svg" alt="Colmar Academy Logo">
 		<p>COLMAR<span>ACADEMY</span></p>
@@ -19,6 +21,7 @@
 		</nav>
 	</header>
 
+	<!-- BANNER -->
 	<main>
 		<img src="./Resources/images/banner.jpg" alt="Students Learning">
 		<h1>Learn something new everyday</h1>
@@ -26,8 +29,100 @@
 		<button>Start here</button>
 	</main>
 
-	<footer>
+	<!-- KEEP PRACTICING -->
+	<div>
+		<div>
+			<img src="./Resources/images/information-main.jpg" alt="Student Reading">
+			<h2>It doesn't hurt to keep practicing</h2>
+			<p>"Curibator...</p>
+			<p>Emanuel, Sr Strategist at Hiring.com</p>
+		</div>
+		<div>
+			<div class="block-long">
+				<h4>Orientation date</h4>
+				<p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+				<a href="">Read more</a>
+			</div>
+			<div class="block-long">
+				<h4>Our campus</h4>
+				<p>Find which campus is close to you</p>
+				<a href="">Read more</a>
+			</div>
+			<div class="block-long">
+				<h4>Our guest lecture</h4>
+				<p>Join a keynote with Oliver Sack about music in medcial treatment</p>
+				<a href="">Read more</a>
+			</div>
+		</div>
+	</div>
 
+	<!-- START LEARNING -->
+	<div>
+		<h3>Start learning</h3>
+		<div>
+			<div class="block">
+				<img src="./Resources/images/course-software.jpg" alt="Software engineering">
+				<h5>Software engineering</h5>
+				<h6>COURSES</h6>
+				<p>Web Development, Mobile Development, iOT, APIs</p>
+			</div>
+			<div class="block">
+				<img src="./Resources/images/course-computer-art.jpg" alt="Computer art">
+				<h5>Computer art</h5>
+				<h6>COURSES</h6>
+				<p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+			</div>
+			<div class="block">
+				<img src="./Resources/images/course-design.jpg" alt="">
+				<h5>Design</h5>
+				<h6>COURSES</h6>
+				<p>User Experience Design, user Research, Visual Design</p>
+			</div>
+			<div class="block">
+				<img src="./Resources/images/course-data.jpg" alt="">
+				<h5>Data</h5>
+				<h6>COURSES</h6>
+				<p>Data Science, Big Data, SQL, Data Visualization</p>
+			</div>
+			<div class="block">
+				<img src="./Resources/images/course-business.jpg" alt="">
+				<h5>Business</h5>
+				<h6>COURSES</h6>
+				<p>Product Development, Business Development, Startup</p>
+			</div>
+			<div class="block">
+				<img src="./Resources/images/course-marketing.jpg" alt="">
+				<h5>Marketing</h5>
+				<h6>COURSES</h6>
+				<p>Analytics, Content Marketing, Mobile Marketing</p>
+			</div>
+		</div>
+	</div>
+
+	<!-- THESIS EXHIBIT -->
+	<div>
+		<h3>Thesis exhibit</h3>
+		<div>
+			<video src="./Resources/videos/thesis.mp4"></video>
+			<h5>Reimagin urban</h5>
+			<p>"Curabitur...</p>
+		</div>
+		<div>
+			<div class="block-long">
+				<h5>Fisma: Design and Prototype</h5>
+				<p>Designer showcase of new prototype product</p>
+			</div>
+			<div class="block-long">
+				<h5>Now and then</h5>
+				<p>Research study about New York</p>
+			</div>
+		</div>
+	</div>
+
+	<footer>
+		<p>Ⓒ 2016 Colmar Academy. All rights reserved</p>
+		<a href="">Terms</a>
+		<a href="">Privacy</a>
 	</footer>
 </body>
 </html>
