Added some CSS to header

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 	<!-- KEEP PRACTICING -->
 	<div>
-		<div>
+		<div class="img-block">
 			<img src="./Resources/images/information-main.jpg" alt="Student Reading">
 			<h2>It doesn't hurt to keep practicing</h2>
 			<p>"Curibator...</p>
@@ -102,7 +102,7 @@
 	<!-- THESIS EXHIBIT -->
 	<div>
 		<h3>Thesis exhibit</h3>
-		<div>
+		<div class="img-block">
 			<video src="./Resources/videos/thesis.mp4"></video>
 			<h5>Reimagin urban</h5>
 			<p>"Curabitur...</p>
