--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
 	<!-- BANNER -->
 	<main>
 		<img src="./Resources/images/banner.jpg" alt="Students Learning">
+		<div>
 		<h1>Learn something new everyday</h1>
 		<h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h3>
 		<button>Start here</button>
+		</div>
 	</main>
 
 	<!-- KEEP PRACTICING -->
