--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	</main>
 
 	<!-- KEEP PRACTICING -->
-	<div>
+	<div class="white-block">
 		<div class="img-block">
 			<img src="./Resources/images/information-main.jpg" alt="Student Reading">
 			<h2>It doesn't hurt to keep practicing</h2>
@@ -41,16 +41,19 @@
 		</div>
 		<div>
 			<div class="block-long">
+				<img src="./Resources/images/information-orientation.jpg"  alt=""> 
 				<h4>Orientation date</h4>
 				<p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
 				<a href="">Read more</a>
 			</div>
 			<div class="block-long">
+				<img src="./Resources/images/information-campus.jpg" alt="">
 				<h4>Our campus</h4>
 				<p>Find which campus is close to you</p>
 				<a href="">Read more</a>
 			</div>
 			<div class="block-long">
+				<img src="./Resources/images/information-guest-lecture.jpg" alt="">
 				<h4>Our guest lecture</h4>
 				<p>Join a keynote with Oliver Sack about music in medcial treatment</p>
 				<a href="">Read more</a>
