--- a/index.html
+++ b/index.html
@@ -62,45 +62,59 @@
 	</div>
 
 	<!-- START LEARNING -->
-	<div>
-		<h3>Start learning</h3>
-		<div>
-			<div class="block">
+	<div id="start-learning">
+		<h2>Start learning</h2>
+		<div class="parent-block">
+			<div class="block-left">
 				<img src="./Resources/images/course-software.jpg" alt="Software engineering">
-				<h5>Software engineering</h5>
-				<h6>COURSES</h6>
-				<p>Web Development, Mobile Development, iOT, APIs</p>
+				<div class="block-white">
+					<h5>Software engineering</h5>
+					<h6>COURSES</h6>
+					<p>Web Development, Mobile Development, iOT, APIs</p>
+				</div>
 			</div>
-			<div class="block">
+			<div class="block-center">
 				<img src="./Resources/images/course-computer-art.jpg" alt="Computer art">
-				<h5>Computer art</h5>
-				<h6>COURSES</h6>
-				<p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+				<div class="block-white">
+					<h5>Computer art</h5>
+					<h6>COURSES</h6>
+					<p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+				</div>
 			</div>
-			<div class="block">
+			<div class="block-right">
 				<img src="./Resources/images/course-design.jpg" alt="">
-				<h5>Design</h5>
-				<h6>COURSES</h6>
-				<p>User Experience Design, user Research, Visual Design</p>
-			</div>
-			<div class="block">
+				<div class="block-white">
+					<h5>Design</h5>
+					<h6>COURSES</h6>
+					<p>User Experience Design, user Research, Visual Design</p>
+				</div>	
+				</div>
+		</div>
+		<div class="parent-block">
+			<div class="block-left">
 				<img src="./Resources/images/course-data.jpg" alt="">
-				<h5>Data</h5>
-				<h6>COURSES</h6>
-				<p>Data Science, Big Data, SQL, Data Visualization</p>
+				<div class="block-white">
+					<h5>Data</h5>
+					<h6>COURSES</h6>
+					<p>Data Science, Big Data, SQL, Data Visualization</p>
+				</div>
 			</div>
-			<div class="block">
+			<div class="block-center">
 				<img src="./Resources/images/course-business.jpg" alt="">
-				<h5>Business</h5>
-				<h6>COURSES</h6>
-				<p>Product Development, Business Development, Startup</p>
-			</div>
-			<div class="block">
+				<div class="block-white">
+					<h5>Business</h5>
+					<h6>COURSES</h6>
+					<p>Product Development, Business Development, Startup</p>
+				</div>
+				</div>
+			<div class="block-right">
 				<img src="./Resources/images/course-marketing.jpg" alt="">
-				<h5>Marketing</h5>
-				<h6>COURSES</h6>
-				<p>Analytics, Content Marketing, Mobile Marketing</p>
-			</div>
+				<div class="block-white">
+					<h5>Marketing</h5>
+					<h6>COURSES</h6>
+					<p>Analytics, Content Marketing, Mobile Marketing</p>
+				</div>	
+				</div>
 		</div>
 	</div>
 
