Added some CSS to THESIS EXHIBIT & FOOTER

--- a/index.html
+++ b/index.html
@@ -119,29 +119,36 @@
 	</div>
 
 	<!-- THESIS EXHIBIT -->
-	<div>
+	<div id="thesis">
 		<h3>Thesis exhibit</h3>
-		<div class="img-block">
-			<video src="./Resources/videos/thesis.mp4"></video>
-			<h5>Reimagin urban</h5>
-			<p>"Curabitur...</p>
-		</div>
-		<div>
-			<div class="block-long">
-				<h5>Fisma: Design and Prototype</h5>
-				<p>Designer showcase of new prototype product</p>
+		<div id="thesis-block">
+			<div class="img-block">
+				<video src="./Resources/videos/thesis.mp4"></video>
+				<h5>Reimagin urban</h5>
+				<p>"Curabitur...</p>
 			</div>
-			<div class="block-long">
-				<h5>Now and then</h5>
-				<p>Research study about New York</p>
-			</div>
+			<div>
+				<div class="block-long">
+					<img src="./Resources/images/thesis-fisma.jpg" alt="">
+					<h5>Fisma: Design and Prototype</h5>
+					<p>Designer showcase of new prototype product</p>
+				</div>
+				<div class="block-long">
+					<img src="./Resources/images/thesis-now-and-then.jpg" alt="">
+					<h5>Now and then</h5>
+					<p>Research study about New York</p>
+				</div>
+			</div>	
 		</div>
 	</div>
 
+	<!-- FOOTER -->
 	<footer>
 		<p>Ⓒ 2016 Colmar Academy. All rights reserved</p>
-		<a href="">Terms</a>
-		<a href="">Privacy</a>
+		<div id="footer">
+			<a href="">Terms</a>
+			<a href="">Privacy</a>
+		</div>
 	</footer>
 </body>
 </html>
