--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 	<!-- BANNER -->
 	<main>
 		<img src="./Resources/images/banner.jpg" alt="Students Learning">
-		<div>
-		<h1>Learn something new everyday</h1>
-		<h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h3>
-		<button>Start here</button>
+		<div id="banner">
+			<h1>Learn something new everyday</h1>
+			<h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h3>
+			<button>Start here</button>
 		</div>
 	</main>
 
@@ -36,27 +36,33 @@
 		<div class="img-block">
 			<img src="./Resources/images/information-main.jpg" alt="Student Reading">
 			<h2>It doesn't hurt to keep practicing</h2>
-			<p>"Curibator...</p>
+			<p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
 			<p>Emanuel, Sr Strategist at Hiring.com</p>
 		</div>
 		<div>
 			<div class="block-long">
 				<img src="./Resources/images/information-orientation.jpg"  alt=""> 
-				<h4>Orientation date</h4>
-				<p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-				<a href="">Read more</a>
+				<div class="words">
+					<h4>Orientation date</h4>
+					<p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+					<a href="">Read more</a>
+				</div>
 			</div>
 			<div class="block-long">
 				<img src="./Resources/images/information-campus.jpg" alt="">
-				<h4>Our campus</h4>
-				<p>Find which campus is close to you</p>
-				<a href="">Read more</a>
+				<div class="words">
+					<h4>Our campus</h4>
+					<p>Find which campus is close to you</p>
+					<a href="">Read more</a>
+				</div>
 			</div>
 			<div class="block-long">
 				<img src="./Resources/images/information-guest-lecture.jpg" alt="">
-				<h4>Our guest lecture</h4>
-				<p>Join a keynote with Oliver Sack about music in medcial treatment</p>
-				<a href="">Read more</a>
+				<div class="words">
+					<h4>Our guest lecture</h4>
+					<p>Join a keynote with Oliver Sack about music in medcial treatment</p>
+					<a href="">Read more</a>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -125,7 +131,7 @@
 			<div class="img-block">
 				<video src="./Resources/videos/thesis.mp4"></video>
 				<h5>Reimagin urban</h5>
-				<p>"Curabitur...</p>
+				<p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
 			</div>
 			<div>
 				<div class="block-long">
