--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 		<img src="./Resources/images/ic-logo.svg" alt="Colmar Academy Logo">
 		<p>COLMAR<span>ACADEMY</span></p>
 		<nav>
-			<a href="">On campus</a>
-			<a href="">Online</a>
-			<a href="">For companies</a>
-			<a href="">Sign in</a>
+			<ul>
+				<li><a href="">On campus</a></li>
+				<li><a href="">Online</a></li>
+				<li><a href="">For companies</a></li>
+				<li><a href="">Sign in</a></li>
+			</ul>
 		</nav>
 	</header>
 
