--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+<!-- I LEFT FINISHING THE BANNER -->
+
 	<!-- NAVBAR -->
 	<header>
 		<img src="./Resources/images/ic-logo.svg" alt="Colmar Academy Logo">
