--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 </head>
 <body>
 
-<!-- I LEFT FINISHING THE BANNER -->
-
 	<!-- NAVBAR -->
 	<header>
 		<img src="./Resources/images/ic-logo.svg" alt="Colmar Academy Logo">
@@ -29,9 +27,11 @@
 	<main>
 		<img src="./Resources/images/banner.jpg" alt="Students Learning">
 		<div id="banner">
-			<h1>Learn something new everyday</h1>
-			<h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h3>
-			<button>Start here</button>
+			<div class="banner-words">
+				<h1>Learn something new everyday</h1>
+				<h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h3>
+				<button>Start here</button>
+			</div>
 		</div>
 	</main>
 
