--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
 	<div class="white-block">
 		<div class="img-block">
 			<img src="./Resources/images/information-main.jpg" alt="Student Reading">
-			<h2>It doesn't hurt to keep practicing</h2>
-			<p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-			<p>Emanuel, Sr Strategist at Hiring.com</p>
+			<div class="wh-words">
+				<h2>It doesn't hurt to keep practicing</h2>
+				<p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+				<span>Emanuel, Sr Strategist at Hiring.com</span>
+			</div>
 		</div>
-		<div>
-			<div class="block-long">
-				<img src="./Resources/images/information-orientation.jpg"  alt=""> 
+		<div id="block-long">
+			<div class="block-long-up">
+				<img class="img" src="./Resources/images/information-orientation.jpg"  alt=""> 
 				<div class="words">
 					<h4>Orientation date</h4>
 					<p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
@@ -53,7 +55,7 @@
 				</div>
 			</div>
 			<div class="block-long">
-				<img src="./Resources/images/information-campus.jpg" alt="">
+				<img class="img" src="./Resources/images/information-campus.jpg" alt="">
 				<div class="words">
 					<h4>Our campus</h4>
 					<p>Find which campus is close to you</p>
@@ -61,7 +63,7 @@
 				</div>
 			</div>
 			<div class="block-long">
-				<img src="./Resources/images/information-guest-lecture.jpg" alt="">
+				<img class="img" src="./Resources/images/information-guest-lecture.jpg" alt="">
 				<div class="words">
 					<h4>Our guest lecture</h4>
 					<p>Join a keynote with Oliver Sack about music in medcial treatment</p>
