--- a/index.html
+++ b/index.html
@@ -158,8 +158,12 @@
 	<footer>
 		<p>Ⓒ 2016 Colmar Academy. All rights reserved</p>
 		<div id="footer">
-			<a href="">Terms</a>
-			<a href="">Privacy</a>
+			<nav>
+			<ul>
+				<li><a href="">Terms</a></li>
+				<li><a href="">Privacy</a></li>
+			</ul>
+			</nav>
 		</div>
 	</footer>
 </body>
