--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<span>Emanuel, Sr Strategist at Hiring.com</span>
 			</div>
 		</div>
-		<div id="block-long">
+		<div id="block-long-kp">
 			<div class="block-long-up">
 				<img class="img" src="./Resources/images/information-orientation.jpg"  alt=""> 
 				<div class="words">
@@ -54,7 +54,7 @@
 					<a href="">Read more</a>
 				</div>
 			</div>
-			<div class="block-long">
+			<div class="block-long-kp">
 				<img class="img" src="./Resources/images/information-campus.jpg" alt="">
 				<div class="words">
 					<h4>Our campus</h4>
@@ -62,7 +62,7 @@
 					<a href="">Read more</a>
 				</div>
 			</div>
-			<div class="block-long">
+			<div class="block-long-kp">
 				<img class="img" src="./Resources/images/information-guest-lecture.jpg" alt="">
 				<div class="words">
 					<h4>Our guest lecture</h4>
@@ -142,13 +142,17 @@
 			<div>
 				<div class="block-long">
 					<img src="./Resources/images/thesis-fisma.jpg" alt="">
-					<h5>Fisma: Design and Prototype</h5>
-					<p>Designer showcase of new prototype product</p>
+					<div class="block-long-words">
+						<h5>Fisma: Design and Prototype</h5>
+						<p>Designer showcase of new prototype product</p>
+					</div>
 				</div>
 				<div class="block-long">
 					<img src="./Resources/images/thesis-now-and-then.jpg" alt="">
-					<h5>Now and then</h5>
-					<p>Research study about New York</p>
+					<div class="block-long-words">
+						<h5>Now and then</h5>
+						<p>Research study about New York</p>
+					</div>
 				</div>
 			</div>	
 		</div>
