Finished Static WEBSITE

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	</div>
 
 	<!-- START LEARNING -->
-	<div id="start-learning">
+	<!-- <div id="start-learning">
 		<h2>Start learning</h2>
 		<div class="parent-block">
 			<div class="block-left">
@@ -128,14 +128,61 @@
 				</div>	
 				</div>
 		</div>
+	</div> -->
+
+
+	<!-- START LEARNING 2 -->
+	<div id="start-learning-2">
+		<h1>Start Learning</h1>
+		<ul class="list">
+			<li class="left">
+				<img src="./Resources/images/course-software.jpg">
+				<h3>Software engineering</h3>
+				<p>COURSES</p>
+				<p>Web Development, Mobile Development, iOT, APIs</p>
+			</li>
+			<li>
+				<img src="./Resources/images/course-computer-art.jpg">
+				<h3>Computer art</h3>
+				<p>COURSES</p>
+				<p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+			</li>
+			<li>
+				<img src="./Resources/images/course-design.jpg">
+				<h3>Design</h3>
+				<p>COURSES</p>
+				<p>User Experience Design, user Research, Visual Design</p>
+			</li>
+		</ul>
+		<ul class="list">
+			<li>
+				<img src="./Resources/images/course-data.jpg">
+				<h3>Data</h3>
+				<p>COURSES</p>
+				<p>Data Science, Big Data, SQL, Data Visualization</p>
+			</li>
+			<li>
+				<img src="./Resources/images/course-business.jpg">
+				<h3>Business</h3>
+				<p>COURSES</p>
+				<p>Product Development, Business Development, Startup</p>
+			</li>
+			<li>
+				<img src="./Resources/images/course-marketing.jpg">
+				<h3>Marketing</h3>
+				<p>COURSES</p>
+				<p>Analytics, Content Marketing, Mobile Marketing</p>
+			</li>
+		</ul>
 	</div>
+
 
 	<!-- THESIS EXHIBIT -->
 	<div id="thesis">
 		<h3>Thesis exhibit</h3>
 		<div id="thesis-block">
 			<div class="img-block">
-				<video src="./Resources/videos/thesis.mp4"></video>
+				<video autoplay src="./Resources/videos/thesis.mp4"></video>
 				<h5>Reimagin urban</h5>
 				<p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
 			</div>
